# PAMI14

./: .gitignore  PAMI14  README.md  eccv-honours
Notes/: docr_project.html  docr_project.md  makefile.html  makefile.md
Talk/: Talk.html  Talk.md
Talk/present/: Presentation.ppt  present.md
cython_version/: hello.pyx  setup.py
latentmotif_v0.12/: CMakeLists.txt  svm_motif_classify  svm_motif_learn  svm_struct_latent_cccp.c
pami2014-code/: CMakeLists.txt  README  build.m  compareQPVariants.m  icml2011.m  linEnvInf.cpp  linEnvLearn.m  pairwiseLearn.m  pami2014.m
svm_light/: svm_classify  svm_learn
